SERVER-34649 Return a bad status when the MovePrimarySourceManager receives a bad return from commitMovePrimary